Fixed overflow on mobile (#436)
I know adding css to < html > is bad practise but since the < body > has been animated there's no way around it. Also had to change the footer a little.

--- a/css/index.css
+++ b/css/index.css
@@ -4,8 +4,13 @@
   -webkit-animation:spin 4s linear infinite;
   animation:spin 4s linear infinite;
 }
+
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+html {
+  overflow-x: hidden;
+}
 
 body {
   font-size: 16px;
